discussion/kv_engine/142736/142736_rev33_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Remove interfaces from memcached.json [3/3]

This patch removes the old definition of interfaces through
memcached.json

Change-Id: If56d95b7ea8ee6086c6c4d80c3aea536a4a7fc9a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-10 05:26:02.000000000
Message: 
Uploaded patch set 33: New patch set was added with same tree, parent, and commit message as Patch Set 32.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 06:46:21.000000000
Message: 
Patch Set 33:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36671/ : FAILURE

Failure of GoogleTest "DurabilityRespondAmbiguousTest.RespondAmbiguousNotificationDeadLock":

<pre>
[ RUN      ] DurabilityRespondAmbiguousTest.RespondAmbiguousNotificationDeadLock
unknown file: error: C++ exception with description "cb::io::rmrf: remove of directory \\?\C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db\test.889402 failed: unknown error" thrown in the test body.
[  FAILED  ] DurabilityRespondAmbiguousTest.RespondAmbiguousNotificationDeadLock (1966 ms)
DurabilityRespondAmbiguousTest.RespondAmbiguousNotificationDeadLock
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36671/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9709/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9709/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9709/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8305/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/244/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31343/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10357/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11432/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11703/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11284/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19288/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
